# XmrSignerCompanion

./: CMakeLists.txt  LICENSE.txt  README.md  components.cpp  daemonjsonrpc.cpp  daemonjsonrpc.h  icons.qrc  infoframe.cpp  infoframe.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkchecker.cpp  networkchecker.h  pagecontroller.h  qaddresslineedit.cpp  qaddresslineedit.h  qamountlineedit.cpp  qamountlineedit.h  qdotprogressindicator.cpp  qdotprogressindicator.h  walletjsonrpc.cpp  walletjsonrpc.h  walletrpcmanager.cpp  walletrpcmanager.h  windowmodaldialog.cpp  windowmodaldialog.h
dialog/: URSettingsDialog.cpp  URSettingsDialog.h
qrcode/: QrCodeWidget.cpp  QrCode_p.h
qrcode/scanner/: QrCodeScanWidget.cpp  QrCodeScanWidget.h  QrCodeScanWidget.ui  QrScanThread.cpp  QrScanThread.h  URSettingsDialog.cpp  URSettingsDialog.h  URWidget.cpp  URWidget.h  URWidget.ui  progressframe.cpp  progressframe.h
